# codesight

./: .gitignore  README.md  package-lock.json  package.json  plan.md
.superpowers/brainstorm/930-1775245502/content/: reviews-layout.html  stat-cards-style.html  (+1 more)
backend/: BACKEND.md  pyproject.toml
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  graph.py  state.py
backend/app/agents/nodes/: __init__.py  comment_formatter.py  complexity_scorer.py  diff_fetcher.py  diff_parser.py  file_filter.py  file_reviewer.py  github_poster.py  security_scanner.py  summary_generator.py
backend/app/agents/prompts/: __init__.py  file_review.py  security_scan.py  summary.py  system.py
backend/app/api/: health.py  reviews.py  router.py  webhooks.py
backend/app/models/: __init__.py  account.py  pull_request.py  repository.py  review.py  user.py
backend/app/schemas/: __init__.py  review.py  webhook.py
backend/app/services/: __init__.py  diff_service.py  github_service.py  token_service.py
backend/app/tasks/: __init__.py  review_task.py
backend/app/utils/: id_gen.py  webhook_verify.py
docs/superpowers/specs/: 2026-04-03-dashboard-ui-improvements-design.md
frontend/: package.json
frontend/prisma/: schema.prisma
frontend/src/: proxy.ts
frontend/src/app/: page.tsx
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/components/: app-sidebar.tsx
src/components/providers/: animate-provider.tsx
src/lib/: auth-client.ts  auth.ts  db.ts
(+31 files in other folders)
